# mlops-fastapi-for-data-scientists

./: .gitignore  README.md  pyproject.toml
app/: main.py
client/: call_predict.py
model/: train_model.py
scripts/: train_model.py
src/my_ml_project/: __init__.py  api.py
